fix(dot-color): fixed dot-color not showing up

--- a/bickerin-website/styles/extraColors.css
+++ b/bickerin-website/styles/extraColors.css
@@ -9,3 +9,9 @@
 .released-dot-color {
   background-color: #42ff29;
 }
+
+@layer components {
+  .status-dot-shape {
+    @apply w-4 h-4 md:w-5 md:h-5 rounded-full
+  }
+}
